<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="12dp"
                tools:src="@android:color/darker_gray" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_item_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:text="@string/nama_dessert"
            android:fontFamily="@font/notoserif"/>

        <TextView
            android:id="@+id/tvharga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="26dp"
            tools:text="@string/harga"
            android:fontFamily="@font/notoserif"/>

        <TextView
            android:id="@+id/tv_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16dp"
            tools:text="@string/detail"
            android:fontFamily="@font/notoserif"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="Rincian Produk"
            android:textSize="16dp"
            android:textStyle="bold"
            android:fontFamily="@font/notoserif"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Stock: "
                    android:textSize="16dp"
                    android:fontFamily="@font/notoserif"/>

                <TextView
                    android:id="@+id/tvstock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    tools:text="@string/stock"
                    android:fontFamily="@font/notoserif"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Expired: "
                    android:textSize="16dp"
                    android:fontFamily="@font/notoserif"/>

                <TextView
                    android:id="@+id/tvexpired"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    tools:text="@string/expired"
                    android:fontFamily="@font/notoserif"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Note: "
                    android:textSize="16dp"
                    android:fontFamily="@font/notoserif"/>

                <TextView
                    android:id="@+id/tvnote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    tools:text="@string/note"
                    android:fontFamily="@font/notoserif"/>
            </TableRow>

            <Button
                android:id="@+id/btnBeli"
                android:text="Beli" />


        </TableLayout>

    </LinearLayout>

</ScrollView>
